--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
       <div class="contents">
         <h3 class="section-title">Pelajaran</h3>
         <div class="contents-item">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg">
+          <img src="html.svg">
           <p>HTML & CSS</p>
         </div>
         <div class="contents-item">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/php.svg">
+          <img src="php.svg">
           <p>PHP</p>
         </div>
         <div class="contents-item">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/ruby.svg">
+          <img src="ruby.svg">
           <p>Ruby</p>
         </div>
         <div class="contents-item">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/swift.svg">
+          <img src="swift.svg">
           <p>Swift</p>
         </div>
       </div>
